Fix selector for choice field inputs and add vertical-align.

--- a/project_template/theme/static/scss/components/_form.scss
+++ b/project_template/theme/static/scss/components/_form.scss
@@ -109,8 +109,9 @@
 			}
 		}
 
-		&input {
+		input {
 			margin: 0;
+			vertical-align: middle;
 		}
 	}
 
